Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.1, 5.6.0, 5.7.0 Beta
-
Android
-
-
dd2657e30a42c269f47195d61a9fe8a5fff02912
Description
User describes this issue:
"
What currently happens when I run this app on Nexus:
after first press I can see "pressed", then application goes to
background and I get bunch of such messages:
W ViewRootImpl: Dropping event due to no window focus: MotionEvent
{ action=ACTION_MOVE, actionButton=0, id[0]=0, x[0]=942.5, y[0]=1348.0, toolType[0]=TOOL_TYPE_FINGER, buttonState=0, metaState=0, flags=0x0, edgeFlags=0x0, pointerCount=1, historySize=1, eventTime=333960275, downTime=333956937, deviceId=5, source=0x1002 }W ViewRootImpl: Dropping event due to no window focus: MotionEvent
{ action=ACTION_MOVE, actionButton=0, id[0]=0, x[0]=947.2107, y[0]=1346.9298, toolType[0]=TOOL_TYPE_FINGER, buttonState=0, metaState=0, flags=0x0, edgeFlags=0x0, pointerCount=1, historySize=2, eventTime=333960297, downTime=333956937, deviceId=5, source=0x1002 }W ViewRootImpl: Dropping event due to no window focus: MotionEvent
{ action=ACTION_MOVE, actionButton=0, id[0]=0, x[0]=958.7161, y[0]=1343.7954, toolType[0]=TOOL_TYPE_FINGER, buttonState=0, metaState=0, flags=0x0, edgeFlags=0x0, pointerCount=1, historySize=2, eventTime=333960314, downTime=333956937, deviceId=5, source=0x1002 }W ViewRootImpl: Dropping event due to no window focus: MotionEvent
{ action=ACTION_MOVE, actionButton=0, id[0]=0, x[0]=973.0, y[0]=1341.0, toolType[0]=TOOL_TYPE_FINGER, buttonState=0, metaState=0, flags=0x0, edgeFlags=0x0, pointerCount=1, historySize=1, eventTime=333960325, downTime=333956937, deviceId=5, source=0x1002 }W ViewRootImpl: Cancelling event due to no window focus: MotionEvent
{ action=ACTION_CANCEL, actionButton=0, id[0]=0, x[0]=973.0, y[0]=1341.0, toolType[0]=TOOL_TYPE_FINGER, buttonState=0, metaState=0, flags=0x0, edgeFlags=0x0, pointerCount=1, historySize=0, eventTime=333960345, downTime=333956937, deviceId=5, source=0x1002 }W ViewRootImpl: Cancelling event due to no window focus: MotionEvent { action=ACTION_CANCEL, actionButton=0, id[0]=0, x[0]=973.0, y[0]=1341.0, toolType[0]=TOOL_TYPE_FINGER, buttonState=0, metaState=0, flags=0x0, edgeFlags=0x0, pointerCount=1, historySize=0, eventTime=333960345, downTime=333956937, deviceId=5, source=0x1002 }
W ViewRootImpl: Cancelling event due to no window focus: MotionEvent
{ action=ACTION_CANCEL, actionButton=0, id[0]=0, x[0]=973.0, y[0]=1341.0, toolType[0]=TOOL_TYPE_FINGER, buttonState=0, metaState=0, flags=0x0, edgeFlags=0x0, pointerCount=1, historySize=0, eventTime=333960345, downTime=333956937, deviceId=5, source=0x1002 }Then I open restore the app and nothing happens. I press and release the
screen - with no reaction from application. Then I press it again and I get
onCancelled signal emitted. And I do not get anything when I release the
screen. After that MouseArea gets working normally.
"
Steps to reproduce:
1) Run attached example on Android device (use either Qt 5.5.1, 5.6 or 5.7
beta, it does not make difference)
2) Tap on the screen
3) Not releasing the finger, minimize the app
4) When it is on the background, release the finger
5) Open the app
6) Press and release the screen 2 times
This Happens only with new Android versions (6.0.1 and newer)
Device is Nexus 6
Attachments
Issue Links
- is duplicated by
-
QTBUG-60465 MouseArea stops working after OS steals release event
-
- Closed
-
For Gerrit Dashboard: QTBUG-53036 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
161251,5 | Clear pending touch events when the application is stopped | 5.6 | qt/qtbase | Status: ABANDONED | 0 | 0 |
212287,2 | Handle the application state changes so items update appropriately | 5.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |